--- a/bai 2.html
+++ b/bai 2.html
@@ -9,7 +9,8 @@
     function sumArr(arr) {
         let sum = 0;
         for (let i = 0; i < arr.length; i++) {
-            if (arr[i] % 2 !== 0) {
+            let surplus = arr[i] % 2 !== 0;
+            if (surplus) {
                 sum += arr[i];
             }
         }
